	Added new mfscopy utility to copy MFS volumes with one command.
	Added ability to handle backup of an A drive with missing B drive.
	Fixed bug in creating swap space of 128mb.
	Preliminary MacOS X port.

Version 2.0
	Added -x and -r to allow restore to expand to fill a drive.
	Added -l flag to restore to save extra partitions on the A drive.
	Added flag in backup if drive was not byte swapped.
	Added new mfsadd utility to add partitions to MFS volume set.
	Added new mfsinfo utility to display MFS volume set info.
	Changed tool name matching to match the name with or without mfs.

Version 1.1
	Added -b and -B to control byte-swapping on restore.
	Added code to fix up MFS transaction log after divorce.
	Fixed bug with restoring multi-partition sets to two drives.

Version 1.0
	Added usage.  Packaged for release.

Version 0.8g
	Fixed error in restore of backups with /var included, where the
	restore would claim not to fit into the drive it was just backed up
	from.

Version 0.8f
	Added check for locked drive.  Any drive with a good partition table
		who's size is less than 2048 megabytes is considered locked.
	Changed case of -v option, so it now DISABLES inclusion of /var in
		backup per suggestion.  Dunno if I'll keep it this way or
		not.
	Fixed size report for combo and dual drive standalone.  Note that the
		combo still reports in standalone equivelent hours.
	Fixed restore error for dual drive systems restored to a single
		larger drive without divorce.

Version 0.8e
	Added a few more debug message.
	At the beginning of backup, summarize base TiVo size, upgraded size,
		and size that backup will be if -s option is used.
	Fixed read across volume boundry for real this time.

Version 0.8d
	Fixed corruption of partition table when extra space was created.
	Made root device come from bootpage.

Version 0.8c
	Fixed bug with using -s flag on combo and dual drive standalone.

Version 0.8b
	Now mfstool will give usage including all known commands.