@@ -637,7 +637,7 @@ http://www.cdrom.com/pub/infozip/zlib/.
 
 LEGAL
 
-MFS Tools are Copyrighted (C) 2000-2002 by Steven Lang, all rights reserved.
+MFS Tools are Copyrighted (C) 2000-2005 by Steven Lang, all rights reserved.
 
 TiVo is a registered trademark of TiVo, Inc.
 
