@@ -1,7 +1,7 @@
 AC_INIT(include/mfs.h)
 AM_CONFIG_HEADER(include/config.h:include/config.h.in)
 
-AM_INIT_AUTOMAKE("MFSTools", snapshot`date +%y%m%d%H`)
+AM_INIT_AUTOMAKE("MFSTools", snapshot050221)
 
 AC_ARG_ENABLE(debug,
 [  --enable-debug	Turn on debugging output],
